# learning_opengl

./: CMakeLists.txt  README.md
res/shaders/: Basic.shader
src/: Application.cpp  Application.h  GLErrorHandler.cpp  GLErrorHandler.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderHelperMethods.cpp  ShaderHelperMethods.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
src/tests/: Test.cpp  Test.h  TestClearColor.cpp  TestClearColor.h  TestSquare.cpp  TestSquare.h  TestTexture2D.cpp  TestTexture2D.h
